# nl2atl

./: .env.example  .gitignore  FEATURES_SUMMARY.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  TEST_DOMAINS.md  analyze_review.py  atl_syntax.py  compare_models.py  dataset_gen.py  demo_comparison.py  evaluation.py  finetune.py  fresh_comparison.py  full_model_comparison.py  gui_tester.py  interact.py  metrics.py  nl2atl.py  pyproject.toml  requirements.txt  retry_failed_verifications.py  run_experiment.sh  run_large_experiment.py  run_verified_dataset.py  sample_store.py  simple_comparison.py  verification_pipeline.py  web_tester.py
.github/: copilot-instructions.md
config/: atl_fragment.yaml  finetune_config.yaml  pipeline_config.yaml  templates_atl.json  test_domains.json
data/: comparison_results.jsonl  comparison_results_20251206_165907.json  experiment_20251201_200910_nl_statements.json  experiment_20251201_200910_rejected.json  experiment_20251201_200910_verified.json  experiment_20251201_200910_verified.jsonl  nl_atl_dataset.jsonl  nl_statements_20251206_165907.json  nl_statements_20251206_170957.json  test_llm.jsonl  test_template.jsonl  unified_samples.json  verified_20_20251129_010759.jsonl  verified_20_20251129_010907.jsonl  verified_20_20251129_012126.jsonl
samples/: sample 1.txt  sample 2.txt  sample 3.txt
templates/: index.html
